--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -680,6 +680,7 @@ body {
     justify-content: center;
     justify-items: center;
     max-height: 170px;
+    max-width: 170px;
     overflow: hidden;
     margin-bottom: 1rem;
     padding: 0rem;
